<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="nothing">Nothing</string>
    <string name="later">Later</string>
    <string name="save_as">Save as</string>
    <string name="file_saved">File saved successfully</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="out_of_memory_error">Out of memory error</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="error">Error: %s</string>
    <string name="open_with">Open with</string>
    <string name="edit_with">Edit with</string>
    <string name="edit">Edit</string>
    <string name="no_app_found">No valid app found</string>
    <string name="no_browser_found">No browser found</string>
    <string name="no_email_client_found">No email client found</string>
    <string name="set_as">Set as</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
    <string name="value_copied_to_clipboard_show">Value copied to clipboard:\n%s</string>
    <string name="dial_number">Dial number</string>
    <string name="unknown">Unknown</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="details">Details</string>
    <string name="notes">Notes</string>
    <string name="deleting_folder">Deleting folder \'%s\'</string>
    <string name="none">None</string>
    <string name="label">Label</string>
    <string name="transparent">Transparent</string>
    <string name="transparent_color">Transparent color</string>
    <string name="select_a_different_color">Select a different color</string>
    <string name="download">Download</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="previous">Previous</string>
    <string name="playpause">Play / Pause</string>
    <string name="next">Next</string>
    <string name="number">Number</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="request_the_required_permissions">Request the required permissions</string>
    <string name="no_access_to_contacts">The app could not access your contacts</string>
    <string name="no_phone_call_permission">App does not have the permission to initiate phone calls, please grant it in the device settings</string>
    <string name="insert_text_here">Insert text here</string>
    <string name="call_person">Call %s</string>
    <string name="confirm_calling_person">Confirm calling %s</string>
    <string name="zero">Zero</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="value">Value</string>
    <string name="value_cannot_be_empty">Value cannot be empty</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="add_to_existing_contact">Add to an existing contact</string>
    <string name="app_corrupt">App Corrupt</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="choose_video">Choose video</string>
    <string name="choose_contact">Choose contact</string>
    <string name="choose_file">Choose file</string>
    <string name="record_audio">Record audio</string>
    <string name="record_video">Record video</string>
    <string name="updating">Updating…</string>
    <string name="phone_storage">Phone storage</string>
    <string name="phone_storage_hidden">Phone storage (not visible by other apps)</string>
    <string name="audio">Audio</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="mobile">Mobile</string>
    <string name="main_number">Main</string>
    <string name="work_fax">Work Fax</string>
    <string name="home_fax">Home Fax</string>
    <string name="pager">Pager</string>
    <string name="no_phone_number_found">No phone number has been found</string>
    <string name="change_view_type">Change view type</string>
    <string name="grid">Grid</string>
    <string name="grid_pro">Grid (Pro)</string>
    <string name="uneven_grid">Uneven Grid</string>
    <string name="list">List</string>
    <string name="increase_column_count">Increase column count</string>
    <string name="reduce_column_count">Reduce column count</string>
    <string name="column_count">Column count</string>
    <string name="portrait_column_count">Portrait column count</string>
    <string name="landscape_column_count">Landscape column count</string>
    <string name="change_cover_image">Change cover image</string>
    <string name="select_photo">Select photo</string>
    <plurals name="column_counts">
        <item quantity="one">%d column</item>
        <item quantity="other">%d columns</item>
    </plurals>
    <string name="manage_blocked_numbers">Manage blocked numbers</string>
    <string name="not_blocking_anyone">You are not blocking anyone.</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="block_number">Block number</string>
    <string name="block_numbers">Block numbers</string>
    <string name="blocked_numbers">Blocked numbers</string>
    <string name="export_blocked_numbers">Export blocked numbers</string>
    <string name="import_blocked_numbers">Import blocked numbers</string>
    <string name="must_make_default_dialer">You have to make this app the default dialer app to make use of blocked numbers.</string>
    <string name="set_as_default">Set as default</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="block_unknown_calls">Block calls from not stored contacts</string>
    <string name="block_unknown_messages">Block messages from not stored contacts</string>
    <string name="add_blocked_number_helper_text">Enter a number or a pattern (e.g. *12345*, +1*8888) to block all calls and messages from numbers matching the pattern.</string>
    <string name="must_make_default_caller_id_app">Can\'t block unknown numbers without caller ID permission.</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="search">Search</string>
    <string name="search_in_placeholder">Search in %s</string>
    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
    <string name="search_contacts">Search contacts</string>
    <string name="search_favorites">Search favorites</string>
    <string name="search_apps">Search apps</string>
    <string name="search_events">Search events</string>
    <string name="search_groups">Search groups</string>
    <string name="search_history">Search history</string>
    <string name="search_calls">Search calls</string>
    <string name="search_files">Search files</string>
    <string name="search_folders">Search folders</string>
    <string name="search_files_and_folders">Search files and folders</string>
    <string name="search_playlists">Search playlists</string>
    <string name="search_artists">Search artists</string>
    <string name="search_albums">Search albums</string>
    <string name="search_tracks">Search tracks</string>
    <string name="search_text">Search text</string>
    <string name="search_conversations">Search conversations</string>
    <string name="search_recordings">Search recordings</string>
    <string name="filter">Filter</string>
    <string name="filter_pro">Filter (Pro)</string>
    <string name="no_items_found">No items found.</string>
    <string name="change_filter">Change filter</string>
    <string name="no_storage_permissions">Storage permission is required</string>
    <string name="no_contacts_permission">Contacts permission is required</string>
    <string name="no_camera_permissions">Camera permission is required</string>
    <string name="no_audio_permissions">Audio permission is required</string>
    <string name="no_permission">No permission</string>
    <string name="allow_notifications_reminders">You must allow the app displaying notifications, else it cannot show reminders.</string>
    <string name="allow_notifications_files">You must allow the app displaying notifications, else it cannot show the progress bar.</string>
    <string name="allow_notifications_music_player">You must allow the app displaying notifications, else it cannot play songs.</string>
    <string name="allow_notifications_voice_recorder">You must allow the app displaying notifications, else it cannot record audio.</string>
    <string name="allow_notifications_incoming_calls">You must allow the app displaying notifications, else it cannot show incoming calls.</string>
    <string name="allow_notifications_incoming_messages">You must allow the app displaying notifications, else it cannot show incoming messages.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_required">Permission Required</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_folder">Rename folder</string>
    <string name="rename_file_error">Could not rename the file</string>
    <string name="rename_folder_error">Could not rename the folder</string>
    <string name="rename_folder_empty">Folder name must not be empty</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="copy_move">Copy / Move</string>
    <string name="destination">Destination</string>
    <string name="click_select_destination">Click here to select destination</string>
    <string name="properties">Properties</string>
    <string name="path">Path</string>
    <string name="resolution">Resolution</string>
    <string name="camera">Camera</string>
    <string name="exif">EXIF</string>
    <string name="gps_coordinates">GPS coordinates</string>
    <string name="custom">Custom</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="select_all">Select all</string>
    <string name="hide_folder">Hide folder</string>
    <string name="unhide_folder">Unhide folder</string>
    <string name="temporarily_show_hidden">Temporarily show hidden</string>
    <string name="stop_showing_hidden">Stop showing hidden media</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="last_modified">Last modified</string>
    <string name="date_taken">Date taken</string>
    <string name="filename">Filename</string>
    <string name="random">Random</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="use_for_this_folder">Use for this folder only</string>
    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
    <string name="settings">Settings</string>
    <string name="temporarily_show_excluded">Temporarily show excluded</string>
    <string name="stop_showing_excluded">Stop showing excluded</string>
    <string name="about">About</string>
</resources>