<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cab_properties"
        android:icon="@mipmap/info"
        android:title="@string/properties"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_share"
        android:icon="@mipmap/share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_copy_move"
        android:icon="@mipmap/copy"
        android:title="@string/copy_move"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_rename"
        android:icon="@mipmap/rename"
        android:title="@string/rename"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_edit"
        android:icon="@mipmap/edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_select_all"
        android:icon="@mipmap/select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_deselect_all"
        android:title="@string/deselect_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/cab_delete"
        android:icon="@mipmap/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>
