<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/open_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/open_camera"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/show_all"
        android:title="@string/show_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/temporarily_show_hidden"
        android:title="@string/temporarily_show_hidden"
        app:showAsAction="never"/>
    <item
        android:id="@+id/stop_showing_hidden"
        android:title="@string/stop_showing_hidden"
        app:showAsAction="never"/>
    <item
        android:id="@+id/increase_column_count"
        android:title="@string/increase_column_count"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reduce_column_count"
        android:title="@string/reduce_column_count"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
