<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cab_properties"
        android:icon="@mipmap/info"
        android:title="@string/properties"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_edit"
        android:icon="@mipmap/rename"
        android:title="@string/rename"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_hide"
        android:icon="@mipmap/hide"
        android:title="@string/hide_folder"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_unhide"
        android:icon="@mipmap/unhide"
        android:title="@string/unhide_folder"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_copy"
        android:title="@string/copy"
        app:showAsAction="never"/>
    <item
        android:id="@+id/cab_delete"
        android:icon="@mipmap/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>
