<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_copy_move"
        android:title="@string/copy_move"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_set_as_wallpaper"
        android:title="@string/set_as_wallpaper"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_open_with"
        android:title="@string/open_with"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_rename"
        android:icon="@drawable/ic_rename"
        android:title="@string/rename"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_properties"
        android:icon="@drawable/ic_info"
        android:title="@string/properties"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/show_on_map"
        android:title="@string/show_on_map"
        app:showAsAction="never"/>
</menu>
