<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cab_properties"
        android:icon="@drawable/ic_info"
        android:title="@string/properties"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_pin"
        android:icon="@drawable/ic_pin"
        android:title="@string/pin_folder"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_unpin"
        android:icon="@drawable/ic_unpin"
        android:title="@string/unpin_folder"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_rename"
        android:icon="@drawable/ic_rename"
        android:title="@string/rename"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_hide"
        android:icon="@drawable/ic_hide"
        android:title="@string/hide_folder"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_unhide"
        android:icon="@drawable/ic_unhide"
        android:title="@string/unhide_folder"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_copy_move"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy_move"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>
