<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_vector"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_properties"
        android:icon="@drawable/ic_info_vector"
        android:title="@string/properties"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit_vector"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_set_as"
        android:icon="@drawable/ic_set_as_vector"
        android:title="@string/set_as"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_open_with"
        android:showAsAction="never"
        android:title="@string/open_with"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_show_on_map"
        android:showAsAction="never"
        android:title="@string/show_on_map"
        app:showAsAction="never" />
</menu>
